syntax = "proto3";

//员工
message Employee{
	int32 Id = 1;
	string Name = 2;
	int32 EmployeeNo = 3;
	Gender Gender = 4;
	Date BirthDay = 5;
	string Department = 6;
	bool IsValid = 7;
	bytes Avatar = 8;
}
//性别
enum Gender{
	NOT_SPESIFICED = 0;
	FEMALE = 1;
	MALE = 2;
}
//日期
message Date{
	int32 Year = 1;
	int32 Month = 2;
	int32 Day = 3;
}